tests/src/frontend/typechecking/invalid/infer_frozen_cla_3.sk
class Foo<T: frozen>(x: Array<T>) {
  static fun test(T): void {
    void
  }
}

fun test(): void {
  Foo::test(mutable Array[])
}
